--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 <title>Formula 1</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http="equiv-E-UA">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<style>
+p[class]{
+	color: green;
+}
+
+.color{
+	background-color: pink;
+}
+
+p[class="color"]{
+	font-size: 2rem;
+}
+</style>
 </head>
 
 <body>
 		
 
+	<p class="color">Google</p>
 </body>
 </html>
