--- a/index.html
+++ b/index.html
@@ -5,24 +5,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<style>
-p[class]{
-	color: green;
-}
-
-.color{
-	background-color: pink;
-}
-
-p[class="color"]{
-	font-size: 2rem;
-}
-</style>
 </head>
 
 <body>
-		
-
-	<p class="color">Google</p>
+<nav>
+ <a href="#">Home</a>
+ <a href="#">Contact</a>
+ <a href="#">Gallery</a>
+</nav>
+</div>
 </body>
 </html>
