--- a/index.html
+++ b/index.html
@@ -1,18 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Formula 1</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-</head>
+  <title>Formula 1</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
 
+    nav {
+      width: 100%;
+      background: #e0e0e0;
+      font-family: Arial, sans-serif;
+    }
+
+    nav ul {
+      display: flex;
+      justify-content: center; /* rata tengah */
+      list-style: none;
+    }
+
+    nav ul li a {
+      display: block;
+      padding: 15px 20px;
+      color: #000000;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    nav ul li a:hover {
+      color: #1a73e8;
+      background: rgba(0,0,0,0.05); /* efek hover halus */
+    }
+
+    /* Responsif untuk layar kecil */
+    @media (max-width: 600px) {
+      nav ul {
+        flex-direction: column;
+        align-items: center;
+      }
+      nav ul li a {
+        width: 100%;
+        text-align: center;
+      }
+    }
+  </style>
+</head>
 <body>
-<nav>
- <a href="#">Home</a>
- <a href="#">Contact</a>
- <a href="#">Gallery</a>
-</nav>
-</div>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Gallery</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
+
