--- a/index.html
+++ b/index.html
@@ -1,63 +1,296 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Formula 1</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <style>
-    * {
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
-    }
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="author" content="andriyfm">
+    <meta name="description" content="mempelajari cara membuat navbar responsive tanpa framework">
+    <title>Responsive Navbar</title>
+    <link rel="stylesheet" href="style.min.css">
+<style>
+background: $primary-color
+  min-width: 100%
 
-    nav {
-      width: 100%;
-      background: #e0e0e0;
-      font-family: Arial, sans-serif;
-    }
+  // DESKTOP
+  // ================
+  padding: 10px 15px
 
-    nav ul {
-      display: flex;
-      justify-content: center; /* rata tengah */
-      list-style: none;
-    }
+  // MOBILE
+  // ================
+  // padding: 0
 
-    nav ul li a {
-      display: block;
-      padding: 15px 20px;
-      color: #000000;
-      text-decoration: none;
-      transition: 0.3s;
-    }
+  // input[type="checkbox"]
+    display: none
 
-    nav ul li a:hover {
-      color: #1a73e8;
-      background: rgba(0,0,0,0.05); /* efek hover halus */
-    }
+  .navbar-container
+    background: transparent
+    position: relative
 
-    /* Responsif untuk layar kecil */
-    @media (max-width: 600px) {
-      nav ul {
-        flex-direction: column;
-        align-items: center;
-      }
-      nav ul li a {
-        width: 100%;
-        text-align: center;
-      }
-    }
-  </style>
-</head>
-<body>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Gallery</a></li>
-    </ul>
-  </nav>
-</body>
+    // DESKTOP
+    // ================
+    display: flex
+	    // MOBILE
+    // ================
+    // display: block
+
+  .nav-check
+    display: none
+
+  .logo
+    padding: 0 15px
+    display: flex
+    flex-direction: row
+    align-items: center
+
+    // MOBILE
+    // ================
+    position: relative
+
+	    .brand-logo
+      display: inline-block
+      font-family: $dawning
+      font-size: px($h4-font-size)
+      line-height: 1.00
+      color: white
+      text-decoration: none
+      transition: $transition-default
+      &:hover
+        color: shade($primary-color, 10%)
+
+    .toggle-button
+      cursor: pointer
+      text-align: center
+      position: absolute
+      right: 0
+      background: transparent
+      width: auto
+      height: auto
+      padding: 20px 10px
+
+    visibility: hidden
+
+      // MOBILE
+      // ================
+      // visibility: visible
+
+      .hamburger
+        $hamburger-width: 35px
+        $hamburger-height: 5px
+        $hamburger-color: white
+        $hamburger-color-hover: shade($primary-color, 10%)
+
+      width: $hamburger-width
+        height: $hamburger-height
+        background: $hamburger-color
+        position: relative
+        &:before
+          content: ""
+          background: $hamburger-color
+          width: $hamburger-width
+          height: $hamburger-height
+          position: absolute
+          top: $hamburger-height + 4px
+          left: 0
+        &:after
+          content: ""
+          background: #eee
+          width: $hamburger-width
+          height: $hamburger-height
+          position: absolute
+          bottom: $hamburger-height + 4px
+          left: 0
+
+	  .menu
+    list-style-type: none
+    padding: 0
+    margin: 0
+    width: 100%
+    display: flex
+    transition: $transition-default
+
+    // DESKTOP
+    // ================
+    flex-direction: row
+    justify-content: flex-end
+    position: static
+    top: 100%
+    background: transparent
+
+	        // MOBILE
+    // ================
+    // display: none
+    // flex-direction: column
+    // position: absolute
+    // background: shade($primary-color, 90%)
+
+    li
+      display: block
+
+      // DESKTOP
+      // ================
+      text-align: center
+
+      // MOBILE
+      // ================
+      // text-align: left
+      // &:last-child a
+        border-bottom: 0
+      a
+      display: block
+        text-decoration: none
+        padding: 12px 20px
+        font-weight: 700
+        text-transform: uppercase
+        transition: $transition-default
+
+        // DESKTOP
+        // ================
+        color: white
+        border-radius: $border-radius-md
+        &:hover
+          background: shade($primary-color, 20%)
+        &:focus
+          background: shade($primary-color, 40%)
+
+        // MOBILE
+
+		// ================
+        // color: $primary-color
+        // border-radius: 0
+        // border-bottom: 1px solid transparentize($primary-color, 0.8)
+        // &:hover, &:focus
+          background: $primary-color
+          color: white
+        // &:focus
+          color: shade($primary-color, 30%)
+
+  .dropdown
+    position: relative
+    &:hover > .menu-dropdown
+      visibility: visible
+      display: block
+    &:hover > a
+      background: shade($primary-color, 30%)
+    li a
+      border-radius: 0
+
+    .menu-dropdown
+    // DESKTOP
+    // ================
+    background: shade($primary-color, 90%)
+    visibility: hidden
+    display: block
+    position: absolute
+    left: -10px
+    top: calc(100% + 9px)
+    border-bottom-left-radius: $border-radius-sm
+    border-bottom-right-radius: $border-radius-sm
+    li
+      border-bottom: 1px solid transparentize($primary-color, 0.8)
+      &:last-child a
+        border-bottom-left-radius: $border-radius-sm
+        border-bottom-right-radius: $border-radius-sm
+
+    // MOBILE
+
+	    // ================
+    // background: shade($primary-color, 50%)
+    // visibility: visible
+    // display: none
+    // position: static
+    // margin-left: 30px
+    // border-radius: 0
+    // li
+    //   border-bottom: 0
+    //   &:last-child a
+    //     border-radius: 0
+
+@media (max-width: 1000px)
+  #navbar
+    padding: 0
+    .navbar-container
+      display: block
+
+    .nav-check
+      &:checked ~ ul.menu
+        display: block
+
+    .nav-check
+      &:checked ~ ul.menu
+        display: block
+
+    .logo
+      background: $primary-color
+      padding: 10px 15px
+
+      .toggle-button
+        visibility: visible
+        right: 15px
+
+      .menu
+      display: none
+      flex-direction: column
+      position: absolute
+      background: shade($primary-color, 90%)
+      li
+        text-align: left
+        &:last-child a
+          border-bottom: 0
+        a
+          color: $primary-color
+          border-radius: 0
+          border-bottom: 1px solid transparentize($primary-color, 0.8)
+          &:hover, &:focus
+            background: $primary-color
+            color: white
+          &:focus
+            color: shade($primary-color, 30%)
+
+    .menu-dropdown
+	    background: shade($primary-color,80%)
+      visibility: hidden
+      display: none
+      position: static
+      margin-left: 30px
+      border-radius: 0
+      transition: $transition-default
+      li
+        border: 0
+        &:last-child a
+          border-radius: 0
+
+</style>
+  </head>
+  <body>
+
+    <nav id="navbar">
+      <div class="navbar-container">
+        <input class="nav-check" type="checkbox" id="nav-check">
+
+        <!-- Logo dan Toggle Button -->
+        <header class="logo">
+          <a class="brand-logo" href="#">Zudith</a>
+          <label class="toggle-button" for="nav-check">
+            <div class="hamburger"></div>
+          </label>
+        </header>
+<ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li class="dropdown"><a href="#">Events</a>
+            <!-- Submenu -->
+            <ul class="menu-dropdown">
+              <li><a href="#">Reception</a></li>
+              <li><a href="#">Ceremony</a></li>
+              <li><a href="#">Party</a></li>
+            </ul>
+          </li>
+          <li><a href="#">BLog</a></li>
+          <li><a href="#">RSPV</a></li>
+          <li><a href="#">Pages</a></li>
+        </ul>
+      </div>
+    </nav>
+
+  </body>
 </html>
 
