--- a/index.html
+++ b/index.html
@@ -1,296 +1,182 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="author" content="andriyfm">
-    <meta name="description" content="mempelajari cara membuat navbar responsive tanpa framework">
-    <title>Responsive Navbar</title>
-    <link rel="stylesheet" href="style.min.css">
-<style>
-background: $primary-color
-  min-width: 100%
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="author" content="andriyfm">
+  <meta name="description" content="Navbar responsive tanpa framework">
+  <title>Responsive Navbar</title>
+  <style>
+    :root {
+      --primary-color: #1a73e8;
+      --transition: 0.3s;
+      --border-radius-md: 6px;
+      --border-radius-sm: 4px;
+    }
 
-  // DESKTOP
-  // ================
-  padding: 10px 15px
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-  // MOBILE
-  // ================
-  // padding: 0
+    body {
+      font-family: Arial, sans-serif;
+    }
 
-  // input[type="checkbox"]
-    display: none
+    #navbar {
+      background: var(--primary-color);
+      padding: 10px 15px;
+    }
 
-  .navbar-container
-    background: transparent
-    position: relative
+    .navbar-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-    // DESKTOP
-    // ================
-    display: flex
-	    // MOBILE
-    // ================
-    // display: block
+    .logo {
+      color: #fff;
+      font-weight: bold;
+      font-size: 20px;
+      text-decoration: none;
+    }
 
-  .nav-check
-    display: none
+    /* Toggle burger */
+    .toggle-button {
+      display: none;
+      cursor: pointer;
+      font-size: 26px;
+      color: white;
+    }
 
-  .logo
-    padding: 0 15px
-    display: flex
-    flex-direction: row
-    align-items: center
+    /* Menu default (desktop) */
+    .menu {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
 
-    // MOBILE
-    // ================
-    position: relative
+    .menu li a {
+      text-decoration: none;
+      color: white;
+      padding: 8px 12px;
+      border-radius: var(--border-radius-md);
+      transition: var(--transition);
+    }
 
-	    .brand-logo
-      display: inline-block
-      font-family: $dawning
-      font-size: px($h4-font-size)
-      line-height: 1.00
-      color: white
-      text-decoration: none
-      transition: $transition-default
-      &:hover
-        color: shade($primary-color, 10%)
+    .menu li a:hover {
+      background: rgba(255,255,255,0.2);
+    }
 
-    .toggle-button
-      cursor: pointer
-      text-align: center
-      position: absolute
-      right: 0
-      background: transparent
-      width: auto
-      height: auto
-      padding: 20px 10px
+    /* Dropdown (desktop) */
+    .dropdown {
+      position: relative;
+    }
 
-    visibility: hidden
+    .menu-dropdown {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      list-style: none;
+      background: white;
+      padding: 5px 0;
+      display: none;
+      min-width: 150px;
+      border-radius: var(--border-radius-sm);
+    }
 
-      // MOBILE
-      // ================
-      // visibility: visible
+    .menu-dropdown li a {
+      color: black;
+      display: block;
+      padding: 10px 15px;
+    }
 
-      .hamburger
-        $hamburger-width: 35px
-        $hamburger-height: 5px
-        $hamburger-color: white
-        $hamburger-color-hover: shade($primary-color, 10%)
+    .dropdown:hover .menu-dropdown {
+      display: block;
+    }
 
-      width: $hamburger-width
-        height: $hamburger-height
-        background: $hamburger-color
-        position: relative
-        &:before
-          content: ""
-          background: $hamburger-color
-          width: $hamburger-width
-          height: $hamburger-height
-          position: absolute
-          top: $hamburger-height + 4px
-          left: 0
-        &:after
-          content: ""
-          background: #eee
-          width: $hamburger-width
-          height: $hamburger-height
-          position: absolute
-          bottom: $hamburger-height + 4px
-          left: 0
+    /* Responsive Mobile */
+    @media (max-width: 768px) {
+      .toggle-button {
+        display: block; /* burger muncul */
+      }
 
-	  .menu
-    list-style-type: none
-    padding: 0
-    margin: 0
-    width: 100%
-    display: flex
-    transition: $transition-default
+      .menu {
+        display: none; /* menu disembunyikan default */
+        flex-direction: column;
+        width: 100%;
+        background: #f4f4f4;
+        margin-top: 10px;
+      }
 
-    // DESKTOP
-    // ================
-    flex-direction: row
-    justify-content: flex-end
-    position: static
-    top: 100%
-    background: transparent
+      .menu.active {
+        display: flex; /* tampil saat burger diklik */
+      }
 
-	        // MOBILE
-    // ================
-    // display: none
-    // flex-direction: column
-    // position: absolute
-    // background: shade($primary-color, 90%)
+      .menu li a {
+        color: #000;
+        text-align: center;
+        padding: 12px;
+      }
 
-    li
-      display: block
+      /* Dropdown di mobile */
+      .dropdown:hover .menu-dropdown {
+        display: none; /* hilangkan hover */
+      }
 
-      // DESKTOP
-      // ================
-      text-align: center
+      .dropdown .menu-dropdown {
+        position: static;
+        background: #ddd;
+        display: none;
+      }
 
-      // MOBILE
-      // ================
-      // text-align: left
-      // &:last-child a
-        border-bottom: 0
-      a
-      display: block
-        text-decoration: none
-        padding: 12px 20px
-        font-weight: 700
-        text-transform: uppercase
-        transition: $transition-default
+      .dropdown.open .menu-dropdown {
+        display: block; /* tampil saat klik di mobile */
+      }
+    }
+  </style>
+</head>
+<body>
 
-        // DESKTOP
-        // ================
-        color: white
-        border-radius: $border-radius-md
-        &:hover
-          background: shade($primary-color, 20%)
-        &:focus
-          background: shade($primary-color, 40%)
+  <nav id="navbar">
+    <div class="navbar-container">
+      <a class="logo" href="#">Zudith</a>
+      <div class="toggle-button">☰</div>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle">Events</a>
+          <ul class="menu-dropdown">
+            <li><a href="#">Reception</a></li>
+            <li><a href="#">Ceremony</a></li>
+            <li><a href="#">Party</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">RSPV</a></li>
+        <li><a href="#">Pages</a></li>
+      </ul>
+    </div>
+  </nav>
 
-        // MOBILE
+  <script>
+    const toggle = document.querySelector('.toggle-button');
+    const menu = document.querySelector('.menu');
+    const dropdownToggle = document.querySelector('.dropdown-toggle');
+    const dropdown = document.querySelector('.dropdown');
 
-		// ================
-        // color: $primary-color
-        // border-radius: 0
-        // border-bottom: 1px solid transparentize($primary-color, 0.8)
-        // &:hover, &:focus
-          background: $primary-color
-          color: white
-        // &:focus
-          color: shade($primary-color, 30%)
+    toggle.addEventListener('click', () => {
+      menu.classList.toggle('active');
+    });
 
-  .dropdown
-    position: relative
-    &:hover > .menu-dropdown
-      visibility: visible
-      display: block
-    &:hover > a
-      background: shade($primary-color, 30%)
-    li a
-      border-radius: 0
+    // Dropdown untuk mobile (klik, bukan hover)
+    dropdownToggle.addEventListener('click', (e) => {
+      e.preventDefault();
+      dropdown.classList.toggle('open');
+    });
+  </script>
 
-    .menu-dropdown
-    // DESKTOP
-    // ================
-    background: shade($primary-color, 90%)
-    visibility: hidden
-    display: block
-    position: absolute
-    left: -10px
-    top: calc(100% + 9px)
-    border-bottom-left-radius: $border-radius-sm
-    border-bottom-right-radius: $border-radius-sm
-    li
-      border-bottom: 1px solid transparentize($primary-color, 0.8)
-      &:last-child a
-        border-bottom-left-radius: $border-radius-sm
-        border-bottom-right-radius: $border-radius-sm
-
-    // MOBILE
-
-	    // ================
-    // background: shade($primary-color, 50%)
-    // visibility: visible
-    // display: none
-    // position: static
-    // margin-left: 30px
-    // border-radius: 0
-    // li
-    //   border-bottom: 0
-    //   &:last-child a
-    //     border-radius: 0
-
-@media (max-width: 1000px)
-  #navbar
-    padding: 0
-    .navbar-container
-      display: block
-
-    .nav-check
-      &:checked ~ ul.menu
-        display: block
-
-    .nav-check
-      &:checked ~ ul.menu
-        display: block
-
-    .logo
-      background: $primary-color
-      padding: 10px 15px
-
-      .toggle-button
-        visibility: visible
-        right: 15px
-
-      .menu
-      display: none
-      flex-direction: column
-      position: absolute
-      background: shade($primary-color, 90%)
-      li
-        text-align: left
-        &:last-child a
-          border-bottom: 0
-        a
-          color: $primary-color
-          border-radius: 0
-          border-bottom: 1px solid transparentize($primary-color, 0.8)
-          &:hover, &:focus
-            background: $primary-color
-            color: white
-          &:focus
-            color: shade($primary-color, 30%)
-
-    .menu-dropdown
-	    background: shade($primary-color,80%)
-      visibility: hidden
-      display: none
-      position: static
-      margin-left: 30px
-      border-radius: 0
-      transition: $transition-default
-      li
-        border: 0
-        &:last-child a
-          border-radius: 0
-
-</style>
-  </head>
-  <body>
-
-    <nav id="navbar">
-      <div class="navbar-container">
-        <input class="nav-check" type="checkbox" id="nav-check">
-
-        <!-- Logo dan Toggle Button -->
-        <header class="logo">
-          <a class="brand-logo" href="#">Zudith</a>
-          <label class="toggle-button" for="nav-check">
-            <div class="hamburger"></div>
-          </label>
-        </header>
-<ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li class="dropdown"><a href="#">Events</a>
-            <!-- Submenu -->
-            <ul class="menu-dropdown">
-              <li><a href="#">Reception</a></li>
-              <li><a href="#">Ceremony</a></li>
-              <li><a href="#">Party</a></li>
-            </ul>
-          </li>
-          <li><a href="#">BLog</a></li>
-          <li><a href="#">RSPV</a></li>
-          <li><a href="#">Pages</a></li>
-        </ul>
-      </div>
-    </nav>
-
-  </body>
+</body>
 </html>
 
