--- a/index.html
+++ b/index.html
@@ -1,182 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="author" content="andriyfm">
-  <meta name="description" content="Navbar responsive tanpa framework">
-  <title>Responsive Navbar</title>
-  <style>
-    :root {
-      --primary-color: #1a73e8;
-      --transition: 0.3s;
-      --border-radius-md: 6px;
-      --border-radius-sm: 4px;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="styles.css"> <!-- Menghubungkan file CSS eksternal -->
+<title>Dropdown Navbar</title>
+<style>
+/* Mengatur ulang beberapa gaya default dan menentukan jenis font */
+body {
+margin: 0;
+font-family: Arial, sans-serif;
+}
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+/* Gaya untuk seluruh navbar */
+.navbar {
+background-color: #333;
+overflow: hidden;
+}
 
-    body {
-      font-family: Arial, sans-serif;
-    }
+/* Gaya untuk daftar tak-terurut yang berisi item navigasi */
+.navbar-list {
+list-style-type: none;
+margin: 0;
+padding: 0;
+}
 
-    #navbar {
-      background: var(--primary-color);
-      padding: 10px 15px;
-    }
+/* Gaya untuk setiap item navbar */
+.navbar-item {
+float: left;
+}
 
-    .navbar-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+/* Gaya untuk tautan dalam setiap item navbar */
+.navbar-item a {
+display: block;
+color: white;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+}
 
-    .logo {
-      color: #fff;
-      font-weight: bold;
-      font-size: 20px;
-      text-decoration: none;
-    }
+/* Menampilkan konten dropdown saat mengarahkan kursor pada item dropdown */
+.navbar-item.dropdown:hover .dropdown-content {
+display: block;
+}
 
-    /* Toggle burger */
-    .toggle-button {
-      display: none;
-      cursor: pointer;
-      font-size: 26px;
-      color: white;
-    }
+/* Gaya untuk kontainer konten dropdown */
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 160px;
+z-index: 1;
+}
 
-    /* Menu default (desktop) */
-    .menu {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-    }
+/* Gaya untuk tautan dalam konten dropdown */
+.dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+text-align: left;
+}
 
-    .menu li a {
-      text-decoration: none;
-      color: white;
-      padding: 8px 12px;
-      border-radius: var(--border-radius-md);
-      transition: var(--transition);
-    }
+/* Sorot tautan dropdown saat dihover */
+.dropdown-content a:hover {
+background-color: #ddd;
+}
 
-    .menu li a:hover {
-      background: rgba(255,255,255,0.2);
-    }
-
-    /* Dropdown (desktop) */
-    .dropdown {
-      position: relative;
-    }
-
-    .menu-dropdown {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      list-style: none;
-      background: white;
-      padding: 5px 0;
-      display: none;
-      min-width: 150px;
-      border-radius: var(--border-radius-sm);
-    }
-
-    .menu-dropdown li a {
-      color: black;
-      display: block;
-      padding: 10px 15px;
-    }
-
-    .dropdown:hover .menu-dropdown {
-      display: block;
-    }
-
-    /* Responsive Mobile */
-    @media (max-width: 768px) {
-      .toggle-button {
-        display: block; /* burger muncul */
-      }
-
-      .menu {
-        display: none; /* menu disembunyikan default */
-        flex-direction: column;
-        width: 100%;
-        background: #f4f4f4;
-        margin-top: 10px;
-      }
-
-      .menu.active {
-        display: flex; /* tampil saat burger diklik */
-      }
-
-      .menu li a {
-        color: #000;
-        text-align: center;
-        padding: 12px;
-      }
-
-      /* Dropdown di mobile */
-      .dropdown:hover .menu-dropdown {
-        display: none; /* hilangkan hover */
-      }
-
-      .dropdown .menu-dropdown {
-        position: static;
-        background: #ddd;
-        display: none;
-      }
-
-      .dropdown.open .menu-dropdown {
-        display: block; /* tampil saat klik di mobile */
-      }
-    }
-  </style>
+/* Sorot tautan navbar saat dihover */
+.navbar-item a:hover {
+background-color: #ddd;
+color: black;
+}
+</style>
 </head>
 <body>
 
-  <nav id="navbar">
-    <div class="navbar-container">
-      <a class="logo" href="#">Zudith</a>
-      <div class="toggle-button">☰</div>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle">Events</a>
-          <ul class="menu-dropdown">
-            <li><a href="#">Reception</a></li>
-            <li><a href="#">Ceremony</a></li>
-            <li><a href="#">Party</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">RSPV</a></li>
-        <li><a href="#">Pages</a></li>
-      </ul>
-    </div>
-  </nav>
+<!-- Container untuk navbar -->
+<nav class="navbar">
 
-  <script>
-    const toggle = document.querySelector('.toggle-button');
-    const menu = document.querySelector('.menu');
-    const dropdownToggle = document.querySelector('.dropdown-toggle');
-    const dropdown = document.querySelector('.dropdown');
+<!-- Daftar tak-terurut untuk item navigasi -->
+<ul class="navbar-list">
 
-    toggle.addEventListener('click', () => {
-      menu.classList.toggle('active');
-    });
+<!-- Tautan untuk halaman "Home" -->
+<li class="navbar-item"><a href="#">Home</a></li>
 
-    // Dropdown untuk mobile (klik, bukan hover)
-    dropdownToggle.addEventListener('click', (e) => {
-      e.preventDefault();
-      dropdown.classList.toggle('open');
-    });
-  </script>
+<!-- Tautan "Services" dengan menu dropdown -->
+<li class="navbar-item dropdown">
+<a href="#">Services</a>
 
+<!-- Kontainer untuk konten dropdown -->
+<div class="dropdown-content">
+<a href="#">Service 1</a>
+<a href="#">Service 2</a>
+<a href="#">Service 3</a>
+</div>
+</li>
+
+<!-- Tautan untuk halaman "About" -->
+<li class="navbar-item"><a href="#">About</a></li>
+
+<!-- Tautan untuk halaman "Contact" -->
+<li class="navbar-item"><a href="#">Contact</a></li>
+</ul>
+</nav>
 </body>
 </html>
-
