--- a/index.html
+++ b/index.html
@@ -1,108 +1,73 @@
+
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles.css"> <!-- Menghubungkan file CSS eksternal -->
-<title>Dropdown Navbar</title>
-<style>
-/* Mengatur ulang beberapa gaya default dan menentukan jenis font */
-body {
-margin: 0;
-font-family: Arial, sans-serif;
-}
-
-/* Gaya untuk seluruh navbar */
-.navbar {
-background-color: #333;
-overflow: hidden;
-}
-
-/* Gaya untuk daftar tak-terurut yang berisi item navigasi */
-.navbar-list {
-list-style-type: none;
-margin: 0;
-padding: 0;
-}
-
-/* Gaya untuk setiap item navbar */
-.navbar-item {
-float: left;
-}
-
-/* Gaya untuk tautan dalam setiap item navbar */
-.navbar-item a {
-display: block;
-color: white;
-text-align: center;
-padding: 14px 16px;
-text-decoration: none;
-}
-
-/* Menampilkan konten dropdown saat mengarahkan kursor pada item dropdown */
-.navbar-item.dropdown:hover .dropdown-content {
-display: block;
-}
-
-/* Gaya untuk kontainer konten dropdown */
-.dropdown-content {
-display: none;
-position: absolute;
-background-color: #f9f9f9;
-min-width: 160px;
-z-index: 1;
-}
-
-/* Gaya untuk tautan dalam konten dropdown */
-.dropdown-content a {
-color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
-text-align: left;
-}
-
-/* Sorot tautan dropdown saat dihover */
-.dropdown-content a:hover {
-background-color: #ddd;
-}
-
-/* Sorot tautan navbar saat dihover */
-.navbar-item a:hover {
-background-color: #ddd;
-color: black;
-}
-</style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Membuat Navbar Responsive Dengan HTML dan CSS</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
+	<nav class="navbar">
+		<div class="container">
+ 
+			<a href="https://www.malasngoding.com" class="logo">Malas Ngoding</a>
+			
+			<ul class="menu">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Tentang</a></li>
+				<li><a href="#">Produk</a></li>
+				<li><a href="#">Layanan</a></li>
+				<li><a href="#">Kontak Kami</a></li>
+			</ul>
 
-<!-- Container untuk navbar -->
-<nav class="navbar">
-
-<!-- Daftar tak-terurut untuk item navigasi -->
-<ul class="navbar-list">
-
-<!-- Tautan untuk halaman "Home" -->
-<li class="navbar-item"><a href="#">Home</a></li>
-
-<!-- Tautan "Services" dengan menu dropdown -->
-<li class="navbar-item dropdown">
-<a href="#">Services</a>
-
-<!-- Kontainer untuk konten dropdown -->
-<div class="dropdown-content">
-<a href="#">Service 1</a>
-<a href="#">Service 2</a>
-<a href="#">Service 3</a>
-</div>
-</li>
-
-<!-- Tautan untuk halaman "About" -->
-<li class="navbar-item"><a href="#">About</a></li>
-
-<!-- Tautan untuk halaman "Contact" -->
-<li class="navbar-item"><a href="#">Contact</a></li>
-</ul>
-</nav>
+			<div class="tombol">
+				&#9776;
+			</div>
+ 
+		</div>
+	</nav>
+ 
+	<div>
+		<center><h2>Panduan Membuat Navbar Responsive dari <a href="https://www.malasngoding.com/membuat-navbar-responsive-html-css">www.malasngoding.com</a></h2></center>
+	</div>
+ 
 </body>
 </html>
