--- a/index.html
+++ b/index.html
@@ -1,40 +1,3 @@
-
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
 <!DOCTYPE html>
 <html>
 <head>
@@ -42,6 +5,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Membuat Navbar Responsive Dengan HTML dan CSS</title>
 	<link rel="stylesheet" href="style.css">
+<style>
+<nav class="navbar">
+	<div class="container">
+ 
+		<a href="https://www.malasngoding.com" class="logo">Malas Ngoding</a>
+		
+		<ul class="menu">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Tentang</a></li>
+			<li><a href="#">Produk</a></li>
+			<li><a href="#">Layanan</a></li>
+			<li><a href="#">Kontak Kami</a></li>
+		</ul>
+ 
+ 
+		<div class="tombol">
+			&#9776;
+		</div>
+ 
+	</div>
+</nav>
+</style>
 </head>
 <body>
  
