--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Navbar Skilvul Style</title>
+  <title>Responsive Navbar Skilvul Style</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">Logo</div>
-    <button class="menu-toggle" id="menu-toggle">☰</button>
+    
+    <!-- Menu Desktop -->
+    <ul class="nav-links">
+      <li><a href="#">Belajar</a></li>
+      <li><a href="#">Program</a></li>
+      <li><a href="#">Bootcamp</a></li>
+      <li><a href="#">Komunitas</a></li>
+      <li><a href="#">Join Us!</a></li>
+      <li><a href="#">Showcase</a></li>
+      <li><a href="#">Dampak</a></li>
+    </ul>
+
+    <!-- Hamburger Mobile -->
+    <button class="menu-toggle" id="menu-toggle" aria-label="Buka menu">☰</button>
   </nav>
 
-  <!-- Sidebar -->
+  <!-- Sidebar (untuk Mobile) -->
   <aside class="sidebar" id="sidebar">
-    <button class="close-btn" id="close-btn">✖</button>
+    <button class="close-btn" id="close-btn" aria-label="Tutup menu">✖</button>
     <div class="profile">
       <img src="https://via.placeholder.com/60" alt="Profile">
       <h3>Adi Prajadinata</h3>
@@ -36,4 +49,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
