Modified file and push

--- a/index.html
+++ b/index.html
@@ -1,51 +1,29 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Navbar Skilvul Style</title>
-  <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Tutorial Web Desain oleh InsertApps</title>
+	<link rel="stylesheet" href="https://unpkg.com/ace-css/css/ace.min.css">
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo">Logo</div>
+
+	<!-- ## START FOCUS ON CODING HERE -->
+
+    <header>
+
+        <p>InsertApps</p>
+
+    </header>
+
+    <!-- ## END FOCUS CODING HERE -->
+
+    <main>
+        <h1>Hello World...</h1>
+    </main>
     
-    <!-- Menu Desktop -->
-    <ul class="nav-links">
-      <li><a href="#">Belajar</a></li>
-      <li><a href="#">Program</a></li>
-      <li><a href="#">Bootcamp</a></li>
-      <li><a href="#">Komunitas</a></li>
-      <li><a href="#">Join Us!</a></li>
-      <li><a href="#">Showcase</a></li>
-      <li><a href="#">Dampak</a></li>
-    </ul>
-
-    <!-- Hamburger Mobile -->
-    <button class="menu-toggle" id="menu-toggle" aria-label="Buka menu">☰</button>
-  </nav>
-
-  <!-- Sidebar (untuk Mobile) -->
-  <aside class="sidebar" id="sidebar">
-    <button class="close-btn" id="close-btn" aria-label="Tutup menu">✖</button>
-    <div class="profile">
-      <img src="https://via.placeholder.com/60" alt="Profile">
-      <h3>Adi Prajadinata</h3>
-    </div>
-    <ul class="menu">
-      <li><a href="#">Belajar</a></li>
-      <li><a href="#">Program</a></li>
-      <li><a href="#">Bootcamp</a></li>
-      <li><a href="#">Komunitas</a></li>
-      <li><a href="#">Join Us!</a></li>
-      <li><a href="#">Showcase</a></li>
-      <li><a href="#">Dampak</a></li>
-    </ul>
-  </aside>
-
-  <div class="overlay" id="overlay"></div>
-
-  <script src="script.js"></script>
+    <footer>
+        <p>Copyright</p>
+    </footer>
 </body>
 </html>
