--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 
 	<!-- ## START FOCUS ON CODING HERE -->
 
-    <header>
+	<header class="border bg-blue px2 flex items-center white mb4">
+	<div>
+	  ☰
+	</div>
 
-        <p>InsertApps</p>
+	<p>InsertApps</p>
 
-    </header>
-
+	<nav class="ml-auto">
+		About Blog Contact 
+	</nav>
+	
+</header>
     <!-- ## END FOCUS CODING HERE -->
 
     <main>
