--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- ## START FOCUS ON CODING HERE -->
 
 	<header class="border bg-blue px2 flex items-center white mb4">
-	<div>
+	<div class="mr1">
 	  ☰
 	</div>
 
