--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 	  ☰
 	</div>
 
-	<p>InsertApps</p>
+	<a class="btn caps h3 px0" href="#">Logo</a>
+
 
 	<nav class="ml-auto">
-		About Blog Contact 
+		<ul class="list-reset">
+		<li class="inline-block btn">About</li>
+		<li class="inline-block btn">BLog</li>
+		<li class="inline-block btn">Contact</li>
+	</ul> 
 	</nav>
 	
 </header>
