Modified and push

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 </header>
     <!-- ## END FOCUS CODING HERE -->
 
-    <main>
+    <main class="border">
         <h1>Hello World...</h1>
     </main>
     
-    <footer>
+    <footer class="border">
         <p>Copyright</p>
     </footer>
 </body>
