Modified and push

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 	<!-- ## START FOCUS ON CODING HERE -->
 
-	<header class="border bg-blue px2 flex items-center white mb4">
-	<div class="mr1">
+	<header class="bg-blue px2 flex items-center white mb4">
+		<div class="btn px0 mr2">
 	  ☰
 	</div>
 
-	<a class="btn caps h3 px0" href="#">Logo</a>
+	<a class="btn h3 px0" href="#">Logo</a>
 
 
 	<nav class="ml-auto">
