--- a/index.html
+++ b/index.html
@@ -1,40 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tutorial Web Desain oleh InsertApps</title>
-	<link rel="stylesheet" href="https://unpkg.com/ace-css/css/ace.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navbar Hamburger Responsif</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <div class="logo">Logo</div>
+        <ul class="nav-links">
+            <li><a href="#">Beranda</a></li>
+            <li><a href="#">Tentang</a></li>
+            <li><a href="#">Layanan</a></li>
+            <li><a href="#">Kontak</a></li>
+        </ul>
+        <button class="hamburger">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </button>
+    </nav>
 
-	<!-- ## START FOCUS ON CODING HERE -->
-
-	<header class="bg-blue px2 flex items-center white mb4">
-		<div class="btn px0 mr2">
-	  ☰
-	</div>
-
-	<a class="btn h3 px0" href="#">Logo</a>
-
-
-	<nav class="ml-auto">
-		<ul class="list-reset">
-		<li class="inline-block btn">About</li>
-		<li class="inline-block btn">BLog</li>
-		<li class="inline-block btn">Contact</li>
-	</ul> 
-	</nav>
-	
-</header>
-    <!-- ## END FOCUS CODING HERE -->
-
-    <main class="border">
-        <h1>Hello World...</h1>
-    </main>
-    
-    <footer class="border">
-        <p>Copyright</p>
-    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
