Push and modified

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@ nav {
         </button>
     </nav>
 
-    <script src="script.js"></script>
+    <script>
+	    const hamburger = document.querySelector('.hamburger');
+const navLinks = document.querySelector('.nav-links');
+
+hamburger.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+})
+    </script>
 </body>
 </html>
