--- a/index.html
+++ b/index.html
@@ -1,108 +1,55 @@
 <!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar Hamburger Responsif</title>
-    <link rel="stylesheet" href="style.css">
-<style>
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    padding: 10px 20px;
-    color: white;
-}
-
-.logo {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-
-.nav-links li {
-    margin: 0 15px;
-}
-
-.nav-links a {
-    color: white;
-    text-decoration: none;
-}
-
-.hamburger {
-    display: none; /* Sembunyikan di desktop */
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-}
-
-.hamburger .bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    background-color: white;
-}
-
-/* Media Query untuk layar kecil (responsive) */
-@media (max-width: 768px) {
-    .nav-links {
-        display: none; /* Sembunyikan menu secara default di layar kecil */
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        width: 100%;
-        background-color: #333;
-        text-align: center;
-    }
-
-    .nav-links.active {
-        display: flex; /* Tampilkan menu saat aktif */
-    }
-
-    .hamburger {
-        display: block; /* Tampilkan hamburger di layar kecil */
-    }
-}
-</style>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Navbar 1</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+  </head>
+  <body>
     <nav>
-        <div class="logo">Logo</div>
-        <ul class="nav-links">
-            <li><a href="#">Beranda</a></li>
-            <li><a href="#">Tentang</a></li>
-            <li><a href="#">Layanan</a></li>
-            <li><a href="#">Kontak</a></li>
-        </ul>
-        <button class="hamburger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </button>
+      <div class="">
+        <img src="/my-avatar.png" alt="my-avatar" />
+      </div>
+      <div id="menu-icon" class="menu-icon">
+        <i class="ph-fill ph-list"></i>
+      </div>
+      <ul id="menu-list" class="hidden">
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Work</a>
+        </li>
+        <li>
+          <a href="#">Tech Stack</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
     </nav>
-
-    <script>
-	    const hamburger = document.querySelector('.hamburger');
-const navLinks = document.querySelector('.nav-links');
-
-hamburger.addEventListener('click', () => {
-    navLinks.classList.toggle('active');
-})
-    </script>
-</body>
+    <main>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus est
+      in voluptatum nesciunt itaque. Voluptatibus ratione illum ducimus impedit
+      minus itaque officia asperiores, maxime quis fugiat odit natus rerum ipsam
+      quaerat corporis reprehenderit deleniti perspiciatis deserunt nostrum.
+      Asperiores, rerum voluptatum!
+    </main>
+    <script src="/script.js"></script>
+  </body>
 </html>
