Push and delete

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ main {
   <body>
     <nav>
       <div class="">
-        <img src="/my-avatar.png" alt="my-avatar" />
+        <img src="logos.jpg" alt="my-avatar" />
       </div>
       <div id="menu-icon" class="menu-icon">
         <i class="ph-fill ph-list"></i>
