--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 <div id="menu-icon" class="menu-icon">
 <i class="ph-fill ph-list"></i>
 </div>
+<ul id="menu-list" class="hidden">
+<li>
+<a href="#">Home</a>
+</li>
+<li>
+<a href="#">Home</a>
+</li>
+<li>
+<a href="#">Home</a>
+</li>
+<li>
+<a href="#">Home</a>
+</li>
+</ul>
 </nav>	
 </body>
 </html>
