--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
 <li>
 <a href="#">Home</a>
 </li>
+<li>
+<a href="#">Home</a>
+</li>
+<li>
+<a href="#">Work</a>
+</li>
+<li>
+<a href="#">Tech Stack</a>
+</li>
+<li>
+<a href="#">Contact</a>
+</li>
 </ul>
 </nav>	
 </body>
