Modified and push

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 <a href="#">Contact</a>
 </li>
 </ul>
-</nav>	
+</nav>
+<main>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus est
+      in voluptatum nesciunt itaque. Voluptatibus ratione illum ducimus impedit
+      minus itaque officia asperiores, maxime quis fugiat odit natus rerum ipsam
+      quaerat corporis reprehenderit deleniti perspiciatis deserunt nostrum.
+      Asperiores, rerum voluptatum!</p>
+</main>
 </body>
 </html>
