modified and push file

--- a/index.html
+++ b/index.html
@@ -48,5 +48,13 @@
       quaerat corporis reprehenderit deleniti perspiciatis deserunt nostrum.
       Asperiores, rerum voluptatum!</p>
 </main>
+<script>
+const menuIcon = document.getElementById("menu-icon");
+const menuList = document.getElementById("menu-list");
+
+menuIcon.addEventListener("click", () => {
+  menuList.classList.toggle("hidden");
+});
+</script>
 </body>
 </html>
