modifid and push

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <nav>
 <div class="">
- <img src="image" alt="images">
+ <img src="images/logo.png" alt="logoNamaPerusahaan">
 </div>
 <div id="menu-icon" class="menu-icon">
 <i class="ph-fill ph-list"></i>
