--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </a>
     </div>
 
-    <!-- gunakan button agar keyboard-accessible -->
+    <!-- gunakan button agar -->
     <button id="menu-icon" class="menu-icon" aria-controls="menu-list" aria-expanded="false" aria-label="Buka menu">
       <i class="ph-fill ph-list" aria-hidden="true"></i>
     </button>
